--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Base.Theme.KoiStory" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/yellow</item>
         <item name="colorPrimaryVariant">@color/blue</item>
@@ -9,5 +10,21 @@
         <item name="android:background">@color/yellow</item>
         <item name="titleTextColor">@color/black</item>
     </style>
+
     <style name="Theme.KoiStory" parent="Base.Theme.KoiStory" />
+
+    <style name="Theme.KoiStory.AppWidgetContainerParent" parent="@android:style/Theme.DeviceDefault">
+        <!-- Radius of the outer bound of widgets to make the rounded corners -->
+        <item name="appWidgetRadius">16dp</item>
+        <!--
+        Radius of the inner view's bound of widgets to make the rounded corners.
+        It needs to be 8dp or less than the value of appWidgetRadius
+        -->
+        <item name="appWidgetInnerRadius">8dp</item>
+    </style>
+
+    <style name="Theme.KoiStory.AppWidgetContainer" parent="Theme.KoiStory.AppWidgetContainerParent">
+        <!-- Apply padding to avoid the content of the widget colliding with the rounded corners -->
+        <item name="appWidgetPadding">16dp</item>
+    </style>
 </resources>
