--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -56,7 +56,7 @@
         <com.example.koistory.ui.component.MyEditTextName
             android:id="@+id/ed_register_name"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:alpha="0"
@@ -82,7 +82,7 @@
         <com.example.koistory.ui.component.MyEditTextEmail
             android:id="@+id/ed_register_email"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:alpha="0"
@@ -109,7 +109,7 @@
         <com.example.koistory.ui.component.MyEditTextPassword
             android:id="@+id/ed_register_password"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:alpha="0"
