--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -78,7 +78,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ed_add_description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_margin="16dp"
             android:ems="10"
             android:inputType="textLongMessage"
