--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,7 @@
         <com.example.koistory.ui.component.MyEditTextEmail
             android:id="@+id/ed_login_email"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:alpha="0"
@@ -97,7 +97,7 @@
         <com.example.koistory.ui.component.MyEditTextPassword
             android:id="@+id/ed_login_password"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:alpha="0"
