--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="Base.Theme.KoiStory" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/yellow</item>
